--- a/package.json
+++ b/package.json
@@ -4,26 +4,33 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress --colors --config ./webpack.config.js",
+    "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
   },
   "author": "PhongTV",
   "license": "ISC",
   "dependencies": {
-    "express": "~4.14.0",
-    "ejs": "~2.5.2",
-    "mongoose": "~4.6.1",
-    "passport": "~0.3.2",
-    "passport-local": "~1.0.0",
-    "passport-facebook": "~2.1.1",
-    "passport-twitter": "~1.0.4",
-    "passport-google-oauth": "~1.0.0",
-    "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
-    "morgan": "~1.7.0",
     "body-parser": "~1.15.2",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
+    "ejs": "~2.5.2",
+    "express": "~4.14.0",
+    "express-session": "~1.14.1",
     "method-override": "~2.3.6",
-    "express-session": "~1.14.1"
+    "mongoose": "~4.6.1",
+    "morgan": "~1.7.0",
+    "mysql2": "^1.3.5",
+    "passport": "~0.3.2",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
+    "passport-local": "~1.0.0",
+    "passport-twitter": "~1.0.4",
+    "sequelize": "^4.1.0",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
+    "whois-api": "^1.0.2"
   },
   "devDependencies": {
     "mysql": "^2.13.0"
